# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/exchange/{currency}": {
+        "/exchange": {
             "get": {
                 "description": "Exchange currency on Ruble",
                 "consumes": [
@@ -33,7 +33,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Exchange"
+                            "$ref": "#/definitions/v1.response"
                         }
                     },
                     "400": {
@@ -53,17 +53,6 @@
         }
     },
     "definitions": {
-        "entity.Exchange": {
-            "type": "object",
-            "properties": {
-                "currency": {
-                    "type": "string"
-                },
-                "response": {
-                    "type": "string"
-                }
-            }
-        },
         "v1.doExchangeRequest": {
             "type": "object"
         },
